hphp/test/zend/bad/ext/standard/tests/network/gethostbyname_error005.php
<?php
ini_set('display_errors', false);

	var_dump(gethostbyname());
?>